K8s/OKE+Cilium/teleport/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: teleport
  namespace: teleport
spec:
  ports:
  - name: app
    port: 80
    protocol: TCP
    targetPort: 443
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: teleport
  namespace: teleport
subsets:
- addresses:
  - ip: 192.168.0.244
  ports:
  - name: app
    port: 443
    protocol: TCP
