K8s/OKE+Cilium/teleport/teleport-route.yaml
# Teleport UI
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: teleport-route
  namespace: teleport
spec:
  parentRefs:
  - name: cilium-gw
    namespace: gateway
  hostnames:
  - "access.z3cyber.tech"
  - "*.access.z3cyber.tech"
  rules:
   - backendRefs:
      - name: teleport
        port: 80
